# sfxworkbench

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  NEXT.md  README.md  SECURITY.md  SUPPORT.md  audit.py  pyproject.toml
.githooks/: pre-push
.github/workflows/: tests.yml
docs/: ADVANCED_OPERATIONS.md  APP_UI_DIRECTION.md  DEMO.md  FINISH_PLAN.md  GETTING_STARTED.md  METADATA_TAGGING.md  MIGRATIONS.md  NEXT_ARCHIVE_2026-05-13.md  PACK_DEDUPLICATION.md  PHASES.md  PRODUCT_DIRECTION.md  REAL_LIBRARY_SLICES.md  RELEASE.md  SIMILARITY.md  TUI_FOLLOWUP.md  UCS.md  WINDOWS.md  json-contracts.md
scripts/: bench_large_library.py  bench_scan.py  install-git-hooks.ps1  install-macos-tui.sh  install-windows-tui.ps1  internal_beta_audit.py  run-macos-tui.sh  run-windows-tui.ps1
sfxworkbench/: apply_logs.py  artifacts.py  audio.py  audit_bundle.py  audit_cmd.py  backups.py  clean.py  cli.py  compare.py  config.py  db.py  dedupe.py  delete.py  desktop.py  dual_mono.py  export.py  format_audit.py  groups.py  health.py  jobs.py  junk.py  metadata_audit.py  metadata_backends.py  metadata_fields.py  metadata_view.py  metadata_write.py  models.py  organize.py  organize_nesting.py  packs.py  path_safety.py  platform_paths.py  preservation.py  processed.py  query.py  rename.py  scan.py  scan_errors.py  search.py  similarity.py  (+14 more)
sfxworkbench/cli/: __init__.py  _shared.py  audio.py  compare.py  config_cmd.py  delete.py  format.py  groups.py  ls.py  maintenance.py  metadata.py  organize.py  packs.py  similarity.py  tag.py  ucs.py
sfxworkbench/models/: __init__.py  _core.py  compare.py  dedupe.py  delete.py  dual_mono.py  format.py  groups.py  metadata.py  organize.py  packs.py  processed.py  rename.py  scan_errors.py  similarity.py  tag.py  ucs.py
sfxworkbench/tui_screens/: __init__.py  _tabs.py  action_issues.py  advanced_tab.py  clean_tab.py  command_palette.py  confirm_action.py  dedupe_tab.py  files_tab.py  history_tab.py  metadata_review.py  metadata_tab.py  scan_tab.py  start_tab.py
tests/: conftest.py  test_apply_logs.py  test_artifacts.py  test_audio.py  test_audit_cmd.py  test_audit_standalone.py  test_backups.py  test_bench_large_library.py  test_clean.py  test_cli_config.py  test_cli_json.py  test_command_palette.py  test_config.py  test_db.py  test_dedupe.py  test_delete.py  test_dual_mono.py  test_export.py  test_fixture_workflows.py  test_format_audit.py  test_groups.py  test_health.py  test_internal_beta_audit.py  test_json_contracts.py  test_junk.py  test_m4_advanced.py  test_metadata_audit.py  test_metadata_backends.py  test_metadata_fields.py  test_metadata_review_screen.py  test_metadata_view.py  test_metadata_write.py  test_organize.py  test_packs.py  test_platform_paths.py  test_preservation.py  test_query.py  test_rename.py  test_scan.py  test_scan_errors.py  (+15 more)
tests/fixtures/: library_basic_manifest.json
tests/fixtures/library_basic/: README.txt
wavwarden/: audio.py  audit_cmd.py  clean.py  cli.py  db.py  dedupe.py  export.py  format_audit.py  groups.py  health.py  junk.py  metadata_audit.py  metadata_backends.py  metadata_view.py  metadata_write.py  models.py  organize.py  packs.py  preservation.py  rename.py  scan.py  scan_errors.py  search.py  similarity.py  tag_plan.py  tag_propose.py  tag_sidecar.py  tag_suggest.py  ucs.py  ucs_catalog.py  ucs_validate.py  utils.py
