[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sfxworkbench"
version = "0.1.0"
description = "Safety-first sound-effects library hygiene CLI"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Matt Wesdock" }]
requires-python = ">=3.11"
keywords = ["audio", "sound-effects", "wav", "library-management", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "soundfile>=0.12",
    "numpy>=1.24",
    "wordninja>=2.0",
]

[project.scripts]
sfx = "sfxworkbench.cli:app"

[project.urls]
Homepage = "https://github.com/cmyklops/sfxworkbench"
Repository = "https://github.com/cmyklops/sfxworkbench"
Issues = "https://github.com/cmyklops/sfxworkbench/issues"
Changelog = "https://github.com/cmyklops/sfxworkbench/blob/main/CHANGELOG.md"
Documentation = "https://github.com/cmyklops/sfxworkbench#readme"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "ruff>=0.8", "poethepoet>=0.30", "mypy>=1.8"]
metadata = ["wavinfo>=4.0", "mutagen>=1.47"]
tui = [
    "orjson>=3.10",
    "textual>=0.89",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["sfxworkbench", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# audit.py must run on Python 3.9+, so cannot use 3.11-only idioms like
# `datetime.UTC` that UP017 would prefer.
"audit.py" = ["T201", "UP017"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
files = ["sfxworkbench"]

[tool.poe.tasks]
test = "pytest tests/ -v"
lint = "ruff check ."
# mypy is onboarded with lax settings; not yet gated on `check` because the
# brownfield codebase has a pre-existing error baseline. Track via the
# `lint-types` task and ratchet errors down before adding it to `check`.
lint-types = "mypy sfxworkbench"
fmt = "ruff format ."
fmt-check = "ruff format --check ."
json-smoke = "pytest tests/test_cli_json.py tests/test_json_contracts.py -v"
check = ["lint", "fmt-check", "test"]
bench-scan = "python scripts/bench_large_library.py"
beta-audit = "python scripts/internal_beta_audit.py"
